 4609 figlet banner added
 4633 curses support from Elias Mårtenson added
 4654 fixed ⍎'→3', ∇, and WS_FULL problems reported by Elias
 4671 fixed 4 ⎕CR bug reported by Elias
 4710 restructured class Workspace
 4715 fixed [] binding in Parser.cc"
 4716 --rawCIN command line option added
 4735 fixed ⌹ dimension problem, send CIN to cerr
 4800 added alternate APL characters from Bob Smith
 4802 fixed wrong closing flag for <SI-entry> in workspace XML file
 4810 UERR channel added
 4818 use kill() rather than /proc to check if process is alive
 4822 fixed 2⊤1 problem
 4898 shared_ptr<Value> working (not yet enabled by default)
 4905 LAST VERSION WITH OLD MEMORY MANAGEMENT
 4907 new memory management
 4937 removed old memory management flags
 4971 added ⍷ (U+2377) as alternate char for ⋸
 5030 first step towards native C++ functions that can be called from APL
 5036 native function file_io completed
 5048 more portable native function interface
 5183 replaced snprintf() by locale-agnostic function
 5220 fixed (2 2⍴⍳4)[1;⍬] problem
 5267 finalized 10⎕CR and fixed some bugs

 5277 GNU APL 1.2 release

 5291 Support files for dyalog keyboards added
 5320 Made ⎕-names case insensitive, map alternate chars in )OUT
 5420 fixed ⎕TS and ⎕TZ computation
 5424 locale patches from Robin
 5429 fixed spaces in wrapped output lines
 5501 new ⎕PW break algorithm
 5508 fixed unique for nested values
 5520 optimization for A⍴B ,B and ⍪B added
 5538 fixed CDR decoding bug
 5552 fixed problem with non-ASCII filenames
 5591 fixed problem with )SAVE with nested values
 5638 command )DUMP
 5750 dyadic ∪ anc ∩
 5798 linear-time scan for associative functions
 5858 APL keyboard wrapper
 5884 Performance.apl added
 5969 emacs mode uodated to latest version

 6096 GNU APL 1.3 release
 6403 more ⎕CR conversions
 6421 new check for -rdynamic
 6431 base64 encoding and decoding of byte vectors
 6858 several bugs fixed
 6970 ∆S and ∆T (stop/trace control)