@@ -265,4 +265,10 @@ operator<<(ostream & os, const UTF8_string & utf)
    loop(c, utf.size())   os << utf[c];
    return os;
 }
-//-----------------------------------------------------------------------------
+//=============================================================================
+int
+UTF8_filebuf::overflow(int c)
+{
+   data.append((UTF8)c);
+}
+//=============================================================================
